Refactored color system.

--- a/src/Chat/components/Group/Group.scss
+++ b/src/Chat/components/Group/Group.scss
@@ -12,7 +12,7 @@
       flex-direction: row-reverse;
 
       .Author {
-        color: $color-primary;
+        color: $color-blue;
       }
 
       .Container {
