--- a/src/Company/pages/Tags/Create/Create.scss
+++ b/src/Company/pages/Tags/Create/Create.scss
@@ -1,7 +1,7 @@
 @import '~@styles/colors.scss';
 
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   font-weight: 500;
   margin: 0 0 40px;
 }
