--- a/src/Company/pages/Tags/Create/components/Color.scss
+++ b/src/Company/pages/Tags/Create/components/Color.scss
@@ -16,7 +16,7 @@
 }
 
 .Item {
-  border: 2px solid $color-gray-0;
+  border: 2px solid $color-white;
   border-radius: 100%;
   flex: 0 0 20px;
   height: 24px;
