--- a/src/Company/pages/Tags/Tags.scss
+++ b/src/Company/pages/Tags/Tags.scss
@@ -5,7 +5,7 @@
 }
 
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   display: flex;
   font-weight: 500;
   justify-content: center;
