--- a/src/Core/components/Card/Card.scss
+++ b/src/Core/components/Card/Card.scss
@@ -1,7 +1,7 @@
 @import '~@styles/colors';
 
 .Root {
-  background: $color-gray-0;
+  background: $color-white;
   border-radius: 20px;
   padding: 20px;
   width: 100%;
