--- a/src/Core/components/Card/components/Header.scss
+++ b/src/Core/components/Card/components/Header.scss
@@ -22,10 +22,6 @@
 }
 
 .SubTitle {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 0 0 2px;
-}
-
-.Title {
-  color: $color-gray-900;
 }
