--- a/src/Core/components/Card/components/Hr.scss
+++ b/src/Core/components/Card/components/Hr.scss
@@ -1,7 +1,7 @@
 @import '~@styles/colors';
 
 .Root {
-  background: $color-gray-100;
+  background: $background-lighten;
   border: 0;
   height: 2px;
   margin: 16px -20px;
