--- a/src/Core/components/Form/Select/components/Value.scss
+++ b/src/Core/components/Form/Select/components/Value.scss
@@ -28,12 +28,12 @@
         background: rgba($color, .9);
 
         .RemoveIcon {
-          color: $color-gray-0;
+          color: $color-white;
         }
       }
 
       &Icon {
-        color: rgba($color-gray-0, .8);
+        color: rgba($color-white, .8);
       }
     }
   }
