--- a/src/Core/containers/Plans/Plans.scss
+++ b/src/Core/containers/Plans/Plans.scss
@@ -7,7 +7,7 @@
 }
 
 .Backdrop {
-  background: rgba($color-gray-100, .95);
+  background: rgba($background-lighten, .95);
   filter: blur(4px);
 }
 
