--- a/src/Landing/containers/Header/Header.scss
+++ b/src/Landing/containers/Header/Header.scss
@@ -30,7 +30,7 @@
 .Container {
   align-items: center;
   background: #eef4ec;
-  border: 4px solid $color-gray-0;
+  border: 4px solid $color-white;
   border-radius: 50px;
   display: flex;
   height: 100px;
