--- a/src/Chat/components/Sticker/Sticker.scss
+++ b/src/Chat/components/Sticker/Sticker.scss
@@ -13,7 +13,7 @@
 }
 
 .Date {
-  background: $color-background;
+  background: $background-lighten;
   border-radius: 12px;
   bottom: 0;
   color: $color-text-secondary;
