--- a/src/Company/containers/Subscriber/Tags/components/Item.scss
+++ b/src/Company/containers/Subscriber/Tags/components/Item.scss
@@ -34,7 +34,7 @@
 .Remove {
   border: 0;
   border-radius: 100%;
-  color: rgba($color-gray-0, .8);
+  color: rgba($color-white, .8);
   height: 20px;
   transition: all .2s;
   width: 20px;
