--- a/src/Company/pages/Billing/Current/components/Traffic.scss
+++ b/src/Company/pages/Billing/Current/components/Traffic.scss
@@ -20,7 +20,7 @@
 }
 
 .Progress {
-  background: $color-background;
+  background: $background-lighten;
   border-radius: 1px;
   height: 2px;
   margin: 12px 0 0;
