--- a/src/Company/pages/Channel/Channel.scss
+++ b/src/Company/pages/Channel/Channel.scss
@@ -20,12 +20,12 @@
 }
 
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 8px 0 0;
 }
 
 .Label {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 0 0 12px;
 }
 
