--- a/src/Company/pages/Channels/Add/components/Source.scss
+++ b/src/Company/pages/Channels/Add/components/Source.scss
@@ -26,13 +26,13 @@
     cursor: pointer;
 
     .Icon {
-      background: rgba($color-primary, .8);
-      color: $color-gray-0;
-      text-shadow: 0 4px 4px rgba($color-gray-0, .4);
+      background: rgba($color-blue, .8);
+      color: $color-white;
+      text-shadow: 0 4px 4px rgba($color-white, .4);
     }
 
     .Title {
-      color: $color-gray-800;
+      color: $color-text;
     }
   }
 
@@ -40,19 +40,19 @@
     pointer-events: none;
 
     .Icon {
-      background: $color-gray-100;
-      color: $color-gray-400;
+      background: $background-lighten;
+      color: $color-text-secondary;
       text-shadow: none;
     }
 
     .Title {
-      color: $color-gray-300;
+      color: $background-light;
     }
   }
 }
 
 .Title {
-  color: $color-gray-500;
+  color: $color-text-secondary;
   margin: 12px 0 0;
   transition: all .2s;
 }
