--- a/src/Company/pages/Fields/Create/Create.scss
+++ b/src/Company/pages/Fields/Create/Create.scss
@@ -5,12 +5,12 @@
 }
 
 .Careful {
-  color: $color-warning;
+  color: $color-orange;
   margin: 12px 0 0;
 }
 
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 0 0 40px;
   text-align: center;
 }
