--- a/src/Core/components/Avatar/Avatar.scss
+++ b/src/Core/components/Avatar/Avatar.scss
@@ -3,8 +3,8 @@
 @mixin color($color) {
   .Plug {
     background: $color;
-    color: $color-gray-0;
-    text-shadow: 0 4px 4px rgba($color-gray-0, .4);
+    color: $color-white;
+    text-shadow: 0 4px 4px rgba($color-white, .4);
   }
 }
 
@@ -21,10 +21,10 @@
 
   &With {
     &Aura {
-      box-shadow: 0 32px 32px rgba($color-gray-1000, .1);
+      box-shadow: 0 32px 32px rgba($color-dark, .1);
 
       &::before {
-        border: 4px solid rgba($color-gray-1000, .05);
+        border: 4px solid rgba($color-dark, .05);
         border-radius: 100%;
         content: '';
         height: 100px;
@@ -56,8 +56,8 @@
 
 .Source {
   align-items: center;
-  background: $color-gray-100;
-  // border: 2px solid $color-gray-0;
+  background: $background-lighten;
+  // border: 2px solid $color-white;
   border-radius: 100%;
   display: flex !important;
   font-size: 10px;
