--- a/src/Core/components/Link/Link.scss
+++ b/src/Core/components/Link/Link.scss
@@ -1,7 +1,7 @@
 @import '~@styles/colors.scss';
 
 .Root {
-  color: $color-primary;
+  color: $color-blue;
   font-family: inherit;
   font-size: inherit;
   font-weight: 600;
