--- a/src/Core/components/Page/components/Breadcrumbs.scss
+++ b/src/Core/components/Page/components/Breadcrumbs.scss
@@ -10,7 +10,7 @@
     }
 
     &:last-child {
-      color: $color-gray-800;
+      color: $color-text;
       font-size: 14px;
       pointer-events: none;
     }
@@ -24,13 +24,13 @@
 }
 
 .Link {
-  color: $color-gray-500;
+  color: $color-text-secondary;
   font-size: 20px;
   font-weight: 700;
   transition: all .2s;
 
   &:hover {
-    color: $color-primary;
+    color: $color-blue;
 
     .Icon {
       transform: translateX(-50%);
