--- a/src/Core/components/Status/Status.scss
+++ b/src/Core/components/Status/Status.scss
@@ -24,7 +24,7 @@
 
 .Dot {
   align-items: center;
-  background: $color-gray-0;
+  background: $color-white;
   border-radius: 100%;
   display: flex;
   height: 14px;
