--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -1,73 +1,8 @@
-// OLD
-// Blue
-$color-blue-500: #0048e3;
-$color-blue-300: #5c68ec;
-$color-blue-200: #a4b3f8;
-$color-blue-100: #e1e6fd;
-$color-blue-50: #eff2fd;
-
-// Brown
-
-// Gray
-$color-gray-1000: #000;
-$color-gray-900: #26272a;
-$color-gray-800: #515255;
-$color-gray-700: #67686c;
-$color-gray-600: #7d7d7f;
-$color-gray-500: #a5a6aa;
-$color-gray-400: #c3c4c8;
-$color-gray-300: #e9e9e9;
-$color-gray-200: #f0f1f5;
-$color-gray-100: #f5f5f3;
-$color-gray-50: #fbfbfb;
-$color-gray-0: #fff;
-
-// Green
-$color-green: #55b242;
-$color-green-500: #5fa24b;
-$color-green-400: #7aba69;
-$color-green-300: #98d788;
-$color-green-200: #b0e3a2;
-$color-green-50: #bbe0b3;
-
-// Orange
-$color-orange-500: #fb681b;
-$color-orange-400: #fea250;
-
-// Pink
-
-// Purple
-$color-purple-500: #7c50f8;
-
-// Red
-$color-red-600: #eb3d3b;
-$color-red-500: #fb4242;
-$color-red-300: #ff7176;
-$color-red-200: #f5a7b2;
-$color-red-50: #fdf0f2;
-
-// Sky
-$color-sky: #0089ff;
-$color-sky-500: #0089ff;
-
-// Yellow
-$color-yellow-500: #ffe26c;
-
-// Common
-$color-black: #000;
-$color-danger: $color-red-300;
-$color-primary: $color-blue-300;
-$color-secondary: #8c67f4;
-$color-success: #55b242;
-$color-purple: #a756ff;
-$color-warning: #f8a652;
-$color-white: #fff;
-
-// NEW
-
 // Backgrounds
-$color-background: #f5f5f3;
-$color-background-2: #eeeeeb;
+$background-lighten: #f5f5f3;
+$background-light: #dcdcdc;
+$background-medium: #c4c4c4;
+$background-darken: #ababab;
 
 // Colors
 $color-dark: #2a2628;
@@ -93,7 +28,7 @@ $color-text-secondary: rgba($color-dark, .6);
 $coloring-variants: (
   Blue: $color-blue,
   Dark: $color-dark,
-  Gray: darken($color-background, 20),
+  Gray: $background-darken,
   Green: $color-green,
   Orange: $color-orange,
   Pink: $color-pink,
