--- a/src/Core/styles/reset.scss
+++ b/src/Core/styles/reset.scss
@@ -5,8 +5,8 @@
 }
 
 :global body {
-  background-color: $color-gray-100;
-  color: $color-gray-900;
+  background-color: $background-lighten;
+  color: $color-text;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
@@ -34,11 +34,11 @@
   }
 
   &:hover {
-    scrollbar-color: $color-gray-300 transparent;
+    scrollbar-color: $background-light transparent;
 
     &::-webkit-scrollbar-thumb {
-      background: $color-gray-300;
-      border: 1px solid $color-gray-0;
+      background: $background-light;
+      border: 1px solid $color-white;
     }
   }
 
@@ -49,7 +49,7 @@
       background: transparent;
 
       &:hover {
-        background: $color-gray-400;
+        background: $color-text-secondary;
       }
     }
   }
