--- a/src/Flow/Common/components/Element.scss
+++ b/src/Flow/Common/components/Element.scss
@@ -2,7 +2,7 @@
 
 .Root {
   align-items: center;
-  border: 1.5px solid $color-gray-300;
+  border: 1.5px solid $background-light;
   border-radius: 16px;
   padding: 12px;
   width: 100%;
