--- a/src/Flow/Common/components/Handle.scss
+++ b/src/Flow/Common/components/Handle.scss
@@ -14,7 +14,7 @@
 }
 
 .Root {
-  background: $color-gray-0 !important;
+  background: $color-white !important;
   height: 20px !important;
   transition: all .2s;
   width: 20px !important;
