--- a/src/Flow/Common/containers/Zoom.scss
+++ b/src/Flow/Common/containers/Zoom.scss
@@ -1,7 +1,7 @@
 @import '~@styles/colors';
 
 .Action {
-  background: $color-gray-0;
+  background: $color-white;
   font-size: 10px;
   height: 32px;
   min-width: 32px;
