--- a/src/Flow/Condition/components/Item.scss
+++ b/src/Flow/Condition/components/Item.scss
@@ -2,10 +2,10 @@
 
 .Root {
   align-items: center;
-  background-color: $color-gray-0;
-  border: 2px solid $color-gray-300;
+  background-color: $color-white;
+  border: 2px solid $background-light;
   border-radius: 8px;
-  color: $color-gray-800;
+  color: $color-text;
   display: flex;
   height: 40px;
   justify-content: left;
@@ -13,7 +13,7 @@
 
   &Is {
     &Action {
-      border-color: $color-blue-300;
+      border-color: 300;
 
       & > * {
         align-items: center;
@@ -21,7 +21,7 @@
       }
 
       & > *:not(:first-child) {
-        border-left: 2px solid $color-gray-400;
+        border-left: 2px solid $color-text-secondary;
       }
     }
   }
