--- a/src/Flow/Condition/components/ItemsList.scss
+++ b/src/Flow/Condition/components/ItemsList.scss
@@ -1,8 +1,8 @@
 @import '~@styles/colors';
 
 .Root {
-  background-color: $color-gray-200;
-  border: 2px solid $color-gray-300;
+  background-color: $background-lighten;
+  border: 2px solid $background-light;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
 }
 
 .Action {
-  border-top: 2px solid $color-gray-300;
+  border-top: 2px solid $background-light;
   margin: 12px 0 0 !important;
   padding: 12px 0;
 }
