--- a/src/Flow/Condition/components/List.scss
+++ b/src/Flow/Condition/components/List.scss
@@ -13,7 +13,7 @@
   width: 100%;
 
   & > *:not(:first-child) {
-    border-top: 2px solid $color-gray-300;
+    border-top: 2px solid $background-light;
     margin: 12px 0 0;
     padding: 12px 0 0;
   }
@@ -25,7 +25,7 @@
 
 .Action {
   align-items: center;
-  border-top: 2px solid $color-gray-300;
+  border-top: 2px solid $background-light;
   display: flex;
   flex-direction: column;
   margin: 12px 0 0;
