--- a/src/Flow/Content/components/Text/Text.scss
+++ b/src/Flow/Content/components/Text/Text.scss
@@ -1,18 +1,18 @@
 @import '~@styles/colors';
 
 .Root {
-  background-color: $color-gray-100;
-  border: 2px solid $color-gray-300;
+  background-color: $background-lighten;
+  border: 2px solid $background-light;
   border-radius: 16px;
   padding: 10px;
   width: 100%;
 
   &Is {
     &Focused {
-      border-color: $color-primary;
+      border-color: $color-blue;
 
       .Actions {
-        border-top-color: $color-gray-300;
+        border-top-color: $background-light;
         height: 54px;
         margin: 12px 0 0;
         padding: 12px 0 0;
