--- a/src/Flow/Content/components/Text/components/Area.scss
+++ b/src/Flow/Content/components/Text/components/Area.scss
@@ -1,8 +1,8 @@
 @import '~@styles/colors';
 
 .Root {
-  background: $color-gray-0;
-  border: 1px solid $color-gray-300;
+  background: $color-white;
+  border: 1px solid $background-light;
   border-radius: 8px;
   font-family: inherit;
   font-size: 12px;
@@ -15,8 +15,8 @@
   transition: border-color .2s, box-shadow .2s;
 
   &:focus {
-    border-color: $color-primary;
-    box-shadow: 0 0 0 1px $color-primary;
+    border-color: $color-blue;
+    box-shadow: 0 0 0 1px $color-blue;
   }
 }
 
