--- a/src/Landing/components/Button.scss
+++ b/src/Landing/components/Button.scss
@@ -18,20 +18,25 @@
 
   &Variant {
     &Green {
-      background: $color-gray-0;
+      background: $color-white;
       border: 2px solid #dee8da;
       border-radius: 30px;
-      color: $color-green-500;
+      color: $color-green;
       height: 54px;
       min-width: 144px;
       transition: all .2s;
 
       &:active,
       &:hover {
-        background: linear-gradient(to top, $color-green-400, $color-green-200);
-        border-color: rgba($color-gray-0, .2);
-        box-shadow: 0 6px 6px 0 rgba(176, 227, 162, .8);
-        color: $color-gray-0;
+        background:
+          linear-gradient(
+            to top,
+            lighten($color-green, 10),
+            lighten($color-green, 32)
+          );
+        border-color: lighten($color-green, 32);
+        box-shadow: 0 6px 6px 0 rgba($color-green, .2);
+        color: $color-white;
       }
     }
 
@@ -39,32 +44,34 @@
       background-image:
         linear-gradient(
           to bottom,
-          $color-orange-400,
-          $color-red-600
+          $color-orange,
+          darken($color-red, 10)
         );
       border-radius: 36px;
       box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6);
-      color: $color-gray-0;
+      color: $color-white;
     }
 
     &OrangeWhite {
       background-image:
         linear-gradient(
           to bottom,
-          $color-orange-400,
-          $color-red-600
+          $color-orange,
+          darken($color-red, 10)
         );
       border-radius: 36px;
-      color: $color-gray-0;
+      color: $color-white;
       min-width: 152px;
     }
   }
 }
 
 .Background {
-  background-color: $color-gray-0;
+  background-color: $color-white;
   border-radius: 80px;
-  box-shadow: inset 0 2px 6px 0 $color-gray-300, inset 0 0 2px 0 $color-gray-300;
+  box-shadow:
+    inset 0 2px 6px 0 $background-light,
+    inset 0 0 2px 0 $background-light;
   height: 80px;
   padding: 8px;
   width: 180px;
@@ -74,13 +81,13 @@
   background-image:
     linear-gradient(
       to bottom,
-      $color-red-600,
-      $color-orange-400
+      darken($color-red, 10),
+      $color-orange
     );
   border-radius: 36px;
   box-shadow:
     0 6px 6px 0 rgba(255, 155, 104, .6),
-    0 -6px 6px 0 rgba($color-gray-0, .3);
+    0 -6px 6px 0 rgba($color-white, .3);
   height: 100%;
   padding: 6px;
   transition: all .2s;
