--- a/src/Landing/containers/Features/components/Item.scss
+++ b/src/Landing/containers/Features/components/Item.scss
@@ -14,17 +14,17 @@
   &Color {
     &Default {
       .Title {
-        color: $color-blue-300;
+        color: $color-blue;
       }
     }
 
     &White {
       .Description {
-        color: rgba($color-gray-0, .8);
+        color: rgba($color-white, .8);
       }
 
       .Title {
-        color: $color-gray-0;
+        color: $color-white;
       }
     }
   }
