--- a/src/Landing/containers/Footer/components/Social.scss
+++ b/src/Landing/containers/Footer/components/Social.scss
@@ -2,8 +2,8 @@
 
 .Root {
   align-items: center;
-  background: $color-green-400;
-  border: 4px solid $color-green-300;
+  background: lighten($color-green, 10);
+  border: 4px solid lighten($color-green, 20);
   border-radius: 100%;
   display: flex;
   height: 60px;
@@ -13,7 +13,7 @@
   &:hover {
     background: linear-gradient(to bottom, #fff, #e2ffdc);
     border: 0;
-    box-shadow: 0 0 4px 1px $color-gray-0;
+    box-shadow: 0 0 4px 1px $color-white;
 
     .Icon {
       background-image: linear-gradient(to top, #75c060, #b0e3a2);
