--- a/src/Landing/containers/Header/containers/Common.scss
+++ b/src/Landing/containers/Header/containers/Common.scss
@@ -3,9 +3,9 @@
 
 .Root {
   background: #eef4ec;
-  border: 4px solid $color-gray-0;
+  border: 4px solid $color-white;
   border-radius: 50px;
-  box-shadow: 0 40px 40px 0 rgba($color-gray-1000, .1);
+  box-shadow: 0 40px 40px 0 rgba($color-dark, .1);
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(4, 1fr);
@@ -49,7 +49,7 @@
 }
 
 .Title {
-  color: $color-green-500;
+  color: $color-green;
 
   @include breakpoints(mobile) {
     font-size: 16px !important;
