--- a/src/Landing/containers/Intro/containers/Phone/components/Message.scss
+++ b/src/Landing/containers/Intro/containers/Phone/components/Message.scss
@@ -10,20 +10,20 @@
       flex-direction: row-reverse;
 
       .Container {
-        background: $color-blue-300;
-        border-color: $color-blue-300;
+        background: $color-blue;
+        border-color: $color-blue;
         border-radius: 32px 32px 8px 32px;
       }
 
       .Text {
-        color: $color-gray-0;
+        color: $color-white;
       }
     }
 
     &Outcoming {
       .Container {
-        background: $color-gray-100;
-        border-color: $color-gray-300;
+        background: $background-lighten;
+        border-color: $background-light;
         border-radius: 32px 32px 32px 8px;
       }
 
@@ -45,8 +45,8 @@
 }
 
 .Button {
-  background: $color-gray-0;
-  border: 2px solid $color-gray-300;
+  background: $color-white;
+  border: 2px solid $background-light;
   border-radius: 20px;
   font-family: inherit;
   padding: 6px 12px;
