--- a/src/Landing/containers/Intro/containers/Phone/containers/Header.scss
+++ b/src/Landing/containers/Intro/containers/Phone/containers/Header.scss
@@ -9,7 +9,7 @@
 }
 
 .Avatar {
-  background-image: linear-gradient(to bottom, $color-gray-0, #d8ffcd);
+  background-image: linear-gradient(to bottom, $color-dark, #d8ffcd);
   border-radius: 100%;
   display: flex;
   height: 60px;
@@ -33,7 +33,7 @@
 
 .Dot {
   animation: pulse .8s infinite;
-  background: rgba($color-gray-1000, .3);
+  background: rgba($color-text, .3);
   border-radius: 100%;
   height: 8px;
   margin: 0 4px 0 0;
@@ -97,11 +97,11 @@
 }
 
 .Name {
-  color: $color-gray-0;
+  color: $color-white;
 }
 
 .Speaker {
-  background: $color-gray-0;
+  background: $color-white;
   border-radius: 4px;
   height: 6px;
   width: 52px;
@@ -109,7 +109,7 @@
 
 .Status {
   align-items: center;
-  color: rgba($color-gray-1000, .3);
+  color: rgba($color-text, .3);
   display: flex;
 }
 
