--- a/src/Landing/containers/Try.scss
+++ b/src/Landing/containers/Try.scss
@@ -44,11 +44,11 @@
 }
 
 .Description {
-  color: rgba($color-gray-0, .8);
+  color: rgba($color-white, .8);
 }
 
 .Title {
-  color: $color-gray-0;
+  color: $color-white;
   font-size: 26px;
   line-height: 32px;
   margin: 8px 0 0;
