--- a/src/Profile/pages/Security/TwoStep/TwoStep.scss
+++ b/src/Profile/pages/Security/TwoStep/TwoStep.scss
@@ -18,11 +18,10 @@
 }
 
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 12px 0 0;
 }
 
 .Title {
-  color: $color-gray-900;
   margin: 4px 0 0;
 }
