--- a/src/Sign/Sign.scss
+++ b/src/Sign/Sign.scss
@@ -15,7 +15,7 @@
 }
 
 .Description {
-  color: $color-gray-500;
+  color: $color-text-secondary;
   margin: 20px 0 40px;
 }
 
@@ -24,8 +24,8 @@
 }
 
 .Fleetly {
-  color: $color-primary;
-  text-shadow: 0 8px 4px rgba($color-primary, .1);
+  color: $color-blue;
+  text-shadow: 0 8px 4px rgba($color-blue, .1);
 }
 
 .Land {
@@ -74,10 +74,6 @@
       transition: all .2s;
     }
   }
-}
-
-.Title {
-  color: $color-gray-800;
 }
 
 .Tree {
