--- a/src/Sign/pages/Confirm/Confirm.scss
+++ b/src/Sign/pages/Confirm/Confirm.scss
@@ -5,7 +5,7 @@
 }
 
 .Send {
-  border-top: 2px solid $color-background;
+  border-top: 2px solid $background-lighten;
   margin: 60px 0 0;
   padding: 32px 0 0;
 
