--- a/src/Company/Company.scss
+++ b/src/Company/Company.scss
@@ -50,5 +50,8 @@
   display: grid;
   flex: 0 0 88px;
   grid-template-rows: 88px 1fr 88px;
+  height: 100vh;
+  position: sticky;
+  top: 0;
   transition: .4s;
 }
