--- a/src/Landing/containers/Intro/containers/Phone/Phone.scss
+++ b/src/Landing/containers/Intro/containers/Phone/Phone.scss
@@ -34,7 +34,7 @@
 }
 
 .Container {
-  background: $background-lighten;
+  background: $color-white;
   border-radius: 52px 52px 0 0;
   box-shadow: 0 0 0 8px rgba($color-white, .2);
   display: flex;
