--- a/src/Landing/containers/Intro/containers/Phone/containers/Header.scss
+++ b/src/Landing/containers/Intro/containers/Phone/containers/Header.scss
@@ -9,7 +9,7 @@
 }
 
 .Avatar {
-  background-image: linear-gradient(to bottom, $color-dark, #d8ffcd);
+  background-image: linear-gradient(to bottom, $color-white, #d8ffcd);
   border-radius: 100%;
   display: flex;
   height: 60px;
