--- a/src/Profile/Profile.scss
+++ b/src/Profile/Profile.scss
@@ -2,12 +2,13 @@
 
 .Root {
   display: flex;
+  margin: 0 40px 40px 0;
   width: 100%;
 }
 
 .Container {
+  display: flex;
   flex: 1 1 auto;
-  margin: 0 40px 40px 0;
   max-width: calc(100% - 260px);
 }
 
@@ -22,6 +23,10 @@
   flex: 0 0 47px;
   height: 57px;
   width: 47px;
+}
+
+.Menu {
+  flex: 1 1 auto;
 }
 
 .Sidebar {
