--- a/src/Core/components/Hero/Hero.scss
+++ b/src/Core/components/Hero/Hero.scss
@@ -34,7 +34,10 @@
 
 .Icon {
   color: $color-blue;
-  font-size: 70px;
+  flex: 0 0 120px;
+  font-size: 58px;
+  height: 120px;
+  width: 120px;
 }
 
 .Title {
