Updated general page.

--- a/src/Company/pages/General/General.scss
+++ b/src/Company/pages/General/General.scss
@@ -8,10 +8,26 @@
 
 .Actions {
   margin: 28px 0 0;
+  width: auto;
+}
+
+.Blue {
+  color: $color-blue;
+}
+
+.Container {
+  padding: 40px;
 }
 
 .Content {
-  padding: 0 20px;
+  padding: 0 16px;
+}
+
+.Danger {
+  box-shadow: 0 0 0 4px $color-red;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  padding: 40px;
 }
 
 .Description {
@@ -19,14 +35,20 @@
   margin: 8px 0 0;
 }
 
-.Container {
+.Error {
+  margin: 20px 0 0;
+  max-width: 400px;
+  width: 100%;
+}
+
+.Form {
   align-items: flex-start;
-  box-shadow: 0 0 0 4px lighten($color-red, 10);
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  justify-content: center;
+}
 
-  & > *:not(:first-child) {
-    margin: 80px 0 0;
-  }
+.Rename {
+  grid-template-columns: 1fr 120px !important;
+  max-width: 400px;
 }
