Added subscribers pagination.

--- a/src/Company/pages/Subscribers/Subscribers.scss
+++ b/src/Company/pages/Subscribers/Subscribers.scss
@@ -1,5 +1,9 @@
 @import '~@styles/colors.scss';
 
+.Root {
+  height: calc(100vh - 40px);
+}
+
 .User {
   display: flex;
   flex-direction: column;
