--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -18,6 +18,7 @@ $color-yellow: #ffe26c;
 $color-white: #fff;
 
 // Sources
+$color-facebook: #1778f2;
 $color-telegram: #08c;
 $color-vk: #2787f5;
 
