Add user avatar to bottom link
User avatar added and aligned.

--- a/src/Company/Company.scss
+++ b/src/Company/Company.scss
@@ -46,6 +46,12 @@
   background: url('~@assets/logo.svg') no-repeat center center / 72% 72%;
 }
 
+.Profile {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 .Sidebar {
   display: grid;
   flex: 0 0 88px;
