--- a/src/Core/components/Avatar/Avatar.scss
+++ b/src/Core/components/Avatar/Avatar.scss
@@ -74,6 +74,19 @@
       color: $color-white;
     }
 
+    &Instagram {
+      background:
+        radial-gradient(
+          circle at 30% 107%,
+          #fdf497 0%,
+          #fdf497 5%,
+          #fd5949 45%,
+          #d6249f 60%,
+          #285aeb 90%
+        );
+      color: $color-white;
+    }
+
     &Telegram {
       background: $color-telegram;
       color: $color-white;
