--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -18,6 +18,15 @@ $color-yellow: #ffe26c;
 $color-white: #fff;
 
 // Sources
+$background-instagram: radial-gradient(
+  circle at 30% 107%,
+  #fdf497 0%,
+  #fdf497 5%,
+  #fd5949 45%,
+  #d6249f 60%,
+  #285aeb 90%
+);
+
 $color-facebook: #1778f2;
 $color-telegram: #08c;
 $color-vk: #2787f5;
