--- a/src/Core/components/Avatar/Avatar.scss
+++ b/src/Core/components/Avatar/Avatar.scss
@@ -75,15 +75,7 @@
     }
 
     &Instagram {
-      background:
-        radial-gradient(
-          circle at 30% 107%,
-          #fdf497 0%,
-          #fdf497 5%,
-          #fd5949 45%,
-          #d6249f 60%,
-          #285aeb 90%
-        );
+      background: $background-instagram;
       color: $color-white;
     }
 
