--- a/src/Landing/containers/Intro/Intro.scss
+++ b/src/Landing/containers/Intro/Intro.scss
@@ -19,13 +19,27 @@
 
 .Background {
   background: url('../../assets/intro-bg.webp') no-repeat center bottom / cover;
+  background-image:
+    image-set(
+      url('../../assets/intro-bg.webp') type('image/webp'),
+      url('../../assets/intro-bg.png') type('image/png')
+    );
+  background-image:
+    -webkit-image-set(
+      url('../../assets/intro-bg.webp') type('image/webp'),
+      url('../../assets/intro-bg.png') type('image/png')
+    );
   height: 100%;
   position: relative;
   width: 100%;
   z-index: 2;
 
   @include breakpoints(mobile) {
-    background-image: url('../../assets/intro-bg_mobile.webp');
+    background-image:
+      image-set(
+        url('../../assets/intro-bg_mobile.webp') type('image/webp'),
+        url('../../assets/intro-bg_mobile.png') type('image/png')
+      );
     height: 952px;
   }
 }
